--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
+    "react-hotkeys-hook": "^5.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.2",
     "react-simple-typewriter": "^5.0.1",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.6",
