--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.2",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.21.2",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.7"
